# aula11_bootcamp_python

./: .pre-commit-config.yaml  README.md  csv_carregamento.py  csv_class_load.py  csv_load.py  csv_load_vasco.py  gols_vasco.py  pyproject.toml
data/: exemplo_filtrado-2025-01-21_11-55-02.csv  exemplo_filtrado-2025-01-21_12-09-26.csv
