[tool.poetry]
name = "aula11-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Ricardo Marques <dataricardom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.1.0"


[tool.black]
line-length = 79
target-version = ['py39']
skip-string-normalization = false

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503","E501"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
